第二周作业更新

--- a/Week02/chap02__homework.ipynb
+++ b/Week02/chap02__homework.ipynb
@@ -1280,7 +1280,7 @@
       "source": [
         "#### 优化思路 v5 - Cython \n",
         "1. 去除检查数组是否出界，去除函数封装\n",
-        "2. 修改 range 循环用为更 cython 语法"
+        "2. 修改 range 循环用为 cython 语法"
       ]
     },
     {
