第二周作业更新

--- a/Week02/chap02__homework.ipynb
+++ b/Week02/chap02__homework.ipynb
@@ -1306,7 +1306,7 @@
         "    '''\n",
         "    优化思路 v5 - Cython \n",
         "    1. 去除检查数组是否出界，去除函数封装\n",
-        "    2. 修改 range 循环用为更 cython 语法\n",
+        "    2. 修改 range 循环用为 cython 语法\n",
         "    '''\n",
         "    # data 行数\n",
         "    cdef int shape = data.shape[0]\n",
@@ -3130,8 +3130,7 @@
       },
       "source": [
         "#### 优化思路 v7 - Cython \n",
-        "1. 使用 ray\n",
-        "感觉没有发挥 ray 的优势，再琢磨一下"
+        "1. 使用 ray，感觉没有发挥 ray 的优势，再琢磨一下"
       ]
     },
     {
