作业：衍生变量，修改描述

--- a/Week09/week09.ipynb
+++ b/Week09/week09.ipynb
@@ -2316,8 +2316,9 @@
         "\n",
         "\n",
         "# 从 Correlation Graph 看到 continuous_funded_amnt 和 continuous_inq_last_6mths 的相关性为 -0.02\n",
-        "# 提高变量直接的相关性，能否提高模型准确性？\n",
+        "# 提高变量之间的相关性，能否有概率提高模型准确性？\n",
         "# 构造衍生变量，continuous_funded_amnt/continuous_inq_last_6mths，还款金额除以最近6个月的申请次数，一定程度上反映近半年的消费的情况\n",
+        "# continuous_inq_last_6mths 存在为 0 的情况，默认让模型自动处理，先看结果\n",
         "train1=train.copy()\n",
         "train1['current_trade_ratio'] = train1['continuous_funded_amnt'] / train1['continuous_inq_last_6mths']\n",
         "\n",
