作业：衍生变量，修改描述，调整参数

--- a/Week09/week09.ipynb
+++ b/Week09/week09.ipynb
@@ -32,13 +32,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oA1U3O1n6FYH",
-        "outputId": "43961439-5bb4-4906-fe44-0cc3aa0159aa"
+        "outputId": "5b084c64-f311-4da8-c6e2-37132290744b"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 167,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,7 +57,7 @@
           "height": 253
         },
         "id": "hJ3M3uTT2tPG",
-        "outputId": "4665ee94-9b70-47d1-e03b-b284e0646c27"
+        "outputId": "922f115c-7ac4-4d70-bf36-3fcc3458b4ce"
       },
       "source": [
         "import pandas as pd\n",
@@ -68,7 +68,7 @@
         "# train_data.head()\n",
         "test_data.head()"
       ],
-      "execution_count": 168,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +615,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 168
+          "execution_count": 54
         }
       ]
     },
@@ -627,7 +627,7 @@
           "height": 253
         },
         "id": "sUAvvTOB34jM",
-        "outputId": "2aab9f82-939f-4eb3-a266-71262f199302"
+        "outputId": "10ef6e7d-83f5-4c92-c5d2-fb125c477f44"
       },
       "source": [
         "x_train = train_data.drop(columns=['loan_status'])\n",
@@ -639,7 +639,7 @@
         "\n",
         "x_test.head()"
       ],
-      "execution_count": 169,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1186,7 +1186,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 169
+          "execution_count": 55
         }
       ]
     },
@@ -1197,14 +1197,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-u87tKEl4kwx",
-        "outputId": "ac9e8149-8e79-4fd6-fd2a-7e9f6f5fa941"
+        "outputId": "00a2f5ff-eac7-42bd-8553-6385d57830ae"
       },
       "source": [
         "TRAIN_IDX=x_train.shape[0]\n",
         "TEST_IDX = TRAIN_IDX + x_test.shape[0]\n",
         "print(TRAIN_IDX, TEST_IDX)"
       ],
-      "execution_count": 170,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -1222,7 +1222,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bLdydvOL4rLR",
-        "outputId": "1266bc46-c83d-491c-8d13-0dcfd29bbf6c"
+        "outputId": "07209fee-eb02-4858-8227-a37c1a76bccf"
       },
       "source": [
         "x = pd.concat([x_train, x_test], axis=0)\n",
@@ -1234,7 +1234,7 @@
         "data = pd.concat([x, y], axis=1)\n",
         "print(data)"
       ],
-      "execution_count": 171,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -1265,13 +1265,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BCPK2VDq5Eaa",
-        "outputId": "7ca82109-096a-40d0-8e9c-f0e768628c12"
+        "outputId": "f49e2288-7aad-4fa1-a9e2-362e251f7b0b"
       },
       "source": [
         "data.columns.to_list()\n",
         "# print(len(data.columns.to_list()))"
       ],
-      "execution_count": 172,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1428,7 +1428,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 172
+          "execution_count": 58
         }
       ]
     },
@@ -1439,12 +1439,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yzbAl1PJ5RV8",
-        "outputId": "17e340b1-51cf-42c5-de49-1f01e69a8da1"
+        "outputId": "3e6f9029-9d6f-40c5-8dca-d841f91d9dbd"
       },
       "source": [
         "data['loan_status'].unique()"
       ],
-      "execution_count": 173,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1456,7 +1456,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 173
+          "execution_count": 59
         }
       ]
     },
@@ -1467,12 +1467,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zklpZMxH5S8i",
-        "outputId": "d3dcbb5d-1204-45e6-dee6-d80fe3161f29"
+        "outputId": "339cc43e-04a9-474f-af1e-4fbdc2e4259f"
       },
       "source": [
         "data['loan_status'].value_counts()"
       ],
-      "execution_count": 174,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1486,7 +1486,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 174
+          "execution_count": 60
         }
       ]
     },
@@ -1498,12 +1498,12 @@
           "height": 160
         },
         "id": "Mv2r0a5r5Tvf",
-        "outputId": "ffa7c514-2476-4924-88e0-07e7713068d0"
+        "outputId": "3df202eb-0926-4cfa-c838-1f4a3573f948"
       },
       "source": [
         "data.loc[0]"
       ],
-      "execution_count": 175,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1795,7 +1795,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 175
+          "execution_count": 61
         }
       ]
     },
@@ -1815,14 +1815,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hB6IaRpu7Wcq",
-        "outputId": "4461ece6-c43e-4edc-bd75-a4d6320a5424"
+        "outputId": "7e970cf6-f327-49d5-a9c6-6d4e8d52a5f7"
       },
       "source": [
         "train = data.iloc[:TRAIN_IDX, :]\n",
         "test = data.iloc[TRAIN_IDX:TEST_IDX, :]\n",
         "print(test)"
       ],
-      "execution_count": 176,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -1856,7 +1856,7 @@
         "train_dataset = lgb.Dataset(train.drop(columns='loan_status'), train['loan_status'])\n",
         "test_dataset = lgb.Dataset(test.drop(columns='loan_status'), test['loan_status'])"
       ],
-      "execution_count": 177,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -1868,7 +1868,7 @@
         "# param = {'num_leaves': 31, 'objective': 'binary', 'metric':'binary_error'}\n",
         "# num_round = 2000"
       ],
-      "execution_count": 178,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -1880,7 +1880,7 @@
         "# model = lgb.train(param, train_dataset, num_boost_round=num_round, valid_sets=[train_dataset, test_dataset])\n",
         "# print(model)"
       ],
-      "execution_count": 179,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -1895,7 +1895,7 @@
         "# accuracy = accuracy_score(test['loan_status'], y_pred)\n",
         "# print(accuracy)"
       ],
-      "execution_count": 180,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -1950,7 +1950,7 @@
         "                'num_round': 1000, 'learning_rate': 0.01, 'feature_fraction': 0.8, 'bagging_fraction': 0.8}\n",
         "    "
       ],
-      "execution_count": 181,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -1983,7 +1983,7 @@
         "        else:\n",
         "            raise Exception(\"Not implemented yet.\")\n"
       ],
-      "execution_count": 182,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -2094,7 +2094,7 @@
         "        test_pred /= k_fold.n_splits\n",
         "        return train_pred, test_pred, acc_result, models"
       ],
-      "execution_count": 183,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -2105,7 +2105,7 @@
       "source": [
         "fitter = LGBFitter(label='loan_status')"
       ],
-      "execution_count": 184,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -2117,7 +2117,7 @@
         "params = {'num_thread': 4, 'num_leaves': 12, 'metric': 'binary', 'objective': 'binary',\n",
         "                'num_round': 2000, 'learning_rate': 0.02, 'feature_fraction': 0.8, 'bagging_fraction': 0.8}"
       ],
-      "execution_count": 185,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -2129,7 +2129,7 @@
         "from sklearn.model_selection import KFold\n",
         "kfold = KFold(n_splits=5)"
       ],
-      "execution_count": 186,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -2139,13 +2139,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JL6fqSFpHXVl",
-        "outputId": "2151dafa-187e-40d4-d421-9bbeaee726c9"
+        "outputId": "bd425f50-99ab-4036-9afc-335568023743"
       },
       "source": [
         "train_pred, test_pred, acc_result, models = fitter.train_k_fold(kfold, train, test, params = params)\n",
         "train_pred, test_pred, acc_result, models"
       ],
-      "execution_count": 187,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -2164,24 +2164,24 @@
             "text/plain": [
               "(array([0.56815873, 0.98620227, 0.97961402, ..., 0.98770343, 0.99765807,\n",
               "        0.99382452]),\n",
-              " array([ 7000.93463337, 10000.99723054, 20000.98153815, ...,\n",
-              "        18000.97391158, 10800.99448802, 15200.99450718]),\n",
+              " array([0.93463337, 0.99723054, 0.98153815, ..., 0.97391158, 0.99448802,\n",
+              "        0.99450718]),\n",
               " [0.07179999999999997,\n",
               "  0.08140000000000003,\n",
               "  0.08330000000000004,\n",
               "  0.0837,\n",
               "  0.08089999999999997],\n",
-              " [<lightgbm.basic.Booster at 0x7fd087ae5950>,\n",
-              "  <lightgbm.basic.Booster at 0x7fd087ae5b50>,\n",
-              "  <lightgbm.basic.Booster at 0x7fd087c509d0>,\n",
-              "  <lightgbm.basic.Booster at 0x7fd087c1e590>,\n",
-              "  <lightgbm.basic.Booster at 0x7fd0935149d0>])"
+              " [<lightgbm.basic.Booster at 0x7fb901c4ea90>,\n",
+              "  <lightgbm.basic.Booster at 0x7fb901c52d90>,\n",
+              "  <lightgbm.basic.Booster at 0x7fb96e10d490>,\n",
+              "  <lightgbm.basic.Booster at 0x7fb901c409d0>,\n",
+              "  <lightgbm.basic.Booster at 0x7fb901c52e90>])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 187
+          "execution_count": 73
         }
       ]
     },
@@ -2192,14 +2192,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KefxdtRuqH7W",
-        "outputId": "7b7a365f-63ad-4826-b133-0c356bb136c5"
+        "outputId": "01e86ae6-ef99-4e90-ba73-a7d3275fd216"
       },
       "source": [
         "# 错误率\n",
         "accuracy_score_base = np.mean(acc_result)\n",
         "accuracy_score_base"
       ],
-      "execution_count": 196,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2211,7 +2211,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 196
+          "execution_count": 74
         }
       ]
     },
@@ -2234,7 +2234,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 197,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -2242,10 +2242,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 936
         },
         "id": "jUYTVAOH_8RX",
-        "outputId": "2c2a38bb-1021-4483-c49b-a66407593bb1"
+        "outputId": "4b8c606d-0b8b-446a-d730-5e0356072fbf"
       },
       "source": [
         "one_hot_cols = [col for col in data.columns.tolist() if '_one_hot' in col]\n",
@@ -2257,7 +2257,7 @@
         "sns.heatmap(round(fea_train.corr(),2), cmap='Reds', annot=True)\n",
         "plt.show()\n"
       ],
-      "execution_count": 198,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2291,7 +2291,7 @@
       "source": [
         "# !pip install category_encoders"
       ],
-      "execution_count": 199,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -2325,7 +2325,20 @@
         "test1=test.copy()\n",
         "test1['current_trade_ratio'] = train1['continuous_funded_amnt'] / train1['continuous_inq_last_6mths']"
       ],
-      "execution_count": 200,
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nvw0RG2i4Eiq"
+      },
+      "source": [
+        "# 重新设置参数\n",
+        "params2 = {'num_thread': 4, 'num_leaves': 12, 'metric': 'binary', 'objective': 'binary',\n",
+        "                'num_round': 2000, 'learning_rate': 0.02, 'feature_fraction': 0.82, 'bagging_fraction': 0.78}"
+      ],
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -2335,22 +2348,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w9skSS3DYpCY",
-        "outputId": "c0dc0c7c-dd8a-46c6-e601-2cb5de531b6d"
+        "outputId": "f035b752-54bc-4225-ab19-e9e85c5e2a64"
       },
       "source": [
-        "train_pred_new1, test_pred_new1, acc_result_new1, models_new1 = fitter.train_k_fold(kfold, train1, test1, params = params)\n",
+        "train_pred_new1, test_pred_new1, acc_result_new1, models_new1 = fitter.train_k_fold(kfold, train1, test1, params = params2)\n",
         "train_pred_new1, test_pred_new1, acc_result_new1, models_new1"
       ],
-      "execution_count": 201,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The minimum is attained in round 425\n",
-            "The minimum is attained in round 475\n",
-            "The minimum is attained in round 510\n",
-            "The minimum is attained in round 655\n",
-            "The minimum is attained in round 320\n"
+            "The minimum is attained in round 575\n",
+            "The minimum is attained in round 443\n",
+            "The minimum is attained in round 496\n",
+            "The minimum is attained in round 618\n",
+            "The minimum is attained in round 314\n"
           ],
           "name": "stdout"
         },
@@ -2358,26 +2371,26 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(array([0.57470598, 0.9861118 , 0.98838246, ..., 0.98725365, 0.99754199,\n",
-              "        0.99423654]),\n",
-              " array([1.12317807, 1.19667718, 1.17909403, ..., 1.16806167, 1.19282615,\n",
-              "        1.19314591]),\n",
-              " [0.0716,\n",
-              "  0.0806,\n",
-              "  0.08340000000000003,\n",
-              "  0.08340000000000003,\n",
-              "  0.08020000000000005],\n",
-              " [<lightgbm.basic.Booster at 0x7fd0878e6d50>,\n",
-              "  <lightgbm.basic.Booster at 0x7fd087695d90>,\n",
-              "  <lightgbm.basic.Booster at 0x7fd087c3d1d0>,\n",
-              "  <lightgbm.basic.Booster at 0x7fd087688a90>,\n",
-              "  <lightgbm.basic.Booster at 0x7fd092c21f50>])"
+              "(array([0.57975868, 0.98693662, 0.99048685, ..., 0.98809533, 0.99760923,\n",
+              "        0.99442086]),\n",
+              " array([5.60093617e+03, 7.20099715e+03, 8.00778273e+03, ...,\n",
+              "        9.73512342e-01, 9.93837081e-01, 9.94350231e-01]),\n",
+              " [0.07099999999999995,\n",
+              "  0.08099999999999996,\n",
+              "  0.0837,\n",
+              "  0.08309999999999995,\n",
+              "  0.08050000000000002],\n",
+              " [<lightgbm.basic.Booster at 0x7fb901c52310>,\n",
+              "  <lightgbm.basic.Booster at 0x7fb90a75c690>,\n",
+              "  <lightgbm.basic.Booster at 0x7fb901c39050>,\n",
+              "  <lightgbm.basic.Booster at 0x7fb901d70490>,\n",
+              "  <lightgbm.basic.Booster at 0x7fb901cdab10>])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 201
+          "execution_count": 80
         }
       ]
     },
@@ -2388,26 +2401,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J3daHXl7pjBP",
-        "outputId": "3b5cad5b-18ec-415f-bcb1-56436b92ed89"
+        "outputId": "13c3f3bf-29b7-4c7c-f7ca-c2ea46ff04d7"
       },
       "source": [
         "# 添加衍生变量后的错误率\n",
         "accuracy_score_new1 = np.mean(acc_result_new1)\n",
         "accuracy_score_new1"
       ],
-      "execution_count": 204,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.07984000000000002"
+              "0.07985999999999997"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 204
+          "execution_count": 81
         }
       ]
     },
@@ -2418,25 +2431,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XrN8n_XoyPhf",
-        "outputId": "3a0c2eea-375b-4af3-c4ad-6a6c78036d77"
+        "outputId": "a0705cf5-7e02-4243-e85e-a59ef628943b"
       },
       "source": [
         "# 添加衍生变量后，错误率降低程度\n",
         "accuracy_score_base - accuracy_score_new1, (accuracy_score_base - accuracy_score_new1)/accuracy_score_base"
       ],
-      "execution_count": 205,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(0.0003799999999999776, 0.004736973323360478)"
+              "(0.00036000000000002697, 0.0044876589379210545)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 205
+          "execution_count": 82
         }
       ]
     }
